--- a/reference.bib
+++ b/reference.bib
@@ -39,6 +39,18 @@
   volume={4},
   year={1991}
 }
+@misc{auer2002finite,
+  title={Finite-time Analysis of the Multiarmed Bandit Problem},
+  author={Auer, P},
+  year={2002},
+  publisher={Kluwer Academic Publishers}
+}
+@article{tesauro2012bayesian,
+  title={Bayesian inference in monte-carlo tree search},
+  author={Tesauro, Gerald and Rajan, VT and Segal, Richard},
+  journal={arXiv preprint arXiv:1203.3519},
+  year={2012}
+}
 @INPROCEEDINGS{5035641,
   author={Osaki, Yasuhiro and Shibahara, Kazutomo and Tajima, Yasuhiro and Kotani, Yoshiyuki},
   booktitle={2008 IEEE Symposium On Computational Intelligence and Games}, 
@@ -48,10 +60,21 @@
   number={},
   pages={205-211},
   keywords={Logic;Agriculture;Testing;Computational modeling;Optimization methods;Learning systems;Educational institutions},
-  doi={10.1109/CIG.2008.5035641}}
-@misc{auer2002finite,
-  title={Finite-time Analysis of the Multiarmed Bandit Problem},
-  author={Auer, P},
-  year={2002},
-  publisher={Kluwer Academic Publishers}
+  doi={10.1109/CIG.2008.5035641}
+}
+@article{clark1961greatest,
+  title={The greatest of a finite set of random variables},
+  author={Clark, Charles E},
+  journal={Operations Research},
+  volume={9},
+  number={2},
+  pages={145--162},
+  year={1961},
+  publisher={INFORMS}
+}
+@inproceedings{gelly2006exploration,
+  title={Exploration exploitation in go: UCT for Monte-Carlo go},
+  author={Gelly, Sylvain and Wang, Yizao},
+  booktitle={NIPS: Neural Information Processing Systems Conference On-line trading of Exploration and Exploitation Workshop},
+  year={2006}
 }
