--- a/reference.bib
+++ b/reference.bib
@@ -78,3 +78,11 @@
   booktitle={NIPS: Neural Information Processing Systems Conference On-line trading of Exploration and Exploitation Workshop},
   year={2006}
 }
+@inproceedings{schadd2008single,
+  title={Single-player monte-carlo tree search},
+  author={Schadd, Maarten PD and Winands, Mark HM and Van Den Herik, H Jaap and Chaslot, Guillaume MJ -B and Uiterwijk, Jos WHM},
+  booktitle={Computers and Games: 6th International Conference, CG 2008, Beijing, China, September 29-October 1, 2008. Proceedings 6},
+  pages={1--12},
+  year={2008},
+  organization={Springer}
+}
